Fixed the hard size on the dice so it stretches properly

--- a/less/chat.less
+++ b/less/chat.less
@@ -43,7 +43,7 @@
 .d10-rollcard-data {
   display: grid;
   grid-template-columns: 175px auto;
-  grid-template-rows: 70px auto;
+  grid-template-rows: auto auto;
   grid-template-areas: 
     "d10-dice d10-number"
     "d10-data d10-data";
