--- a/main.css
+++ b/main.css
@@ -1013,7 +1013,7 @@ ol {
 .d10-rollcard-data {
   display: grid;
   grid-template-columns: 175px auto;
-  grid-template-rows: 70px auto;
+  grid-template-rows: auto auto;
   grid-template-areas: "d10-dice d10-number" "d10-data d10-data";
 }
 .d10-dice-div {
